--- a/package.json
+++ b/package.json
@@ -1,47 +1,29 @@
 {
-  "name": "egg-demo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "node-blog",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "egg-scripts start --title=egg-server-app-starter-egg --workers=1",
-    "stop": "egg-scripts stop --title=egg-server-app-starter-egg",
-    "dev": "egg-bin dev --port 7001",
-    "test": "egg-bin test",
-    "cov": "egg-bin cov",
-    "debug": "egg-bin debug",
-    "lint": "eslint --ext .js ."
+    "start": "node ./bin/www"
   },
-  "engines": {
-    "node": ">=8.9.0"
-  },
-  "author": "guoyanhong",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "consola": "^1.4.4",
+    "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
-    "egg": "^2.21.1",
-    "egg-alinode": "^2.0.1",
-    "egg-joi": "^1.0.7",
-    "egg-logger": "^2.4.1",
-    "egg-logrotator": "^3.0.7",
-    "egg-redis": "^2.3.0",
-    "egg-sequelize": "^4.3.1",
-    "hmacsha1": "^1.0.0",
-    "ioredis": "^4.9.0",
-    "joi": "^14.3.1",
-    "lodash": "^4.17.11",
-    "moment": "^2.24.0",
-    "mysql2": "^1.6.5",
-    "sequelize-mysql-timestamp": "^1.3.0",
-    "urllib": "^2.33.2"
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "http-errors": "~1.6.2",
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.7",
+    "mongoose-auto-increment": "^5.0.1",
+    "morgan": "~1.9.0",
+    "node-fetch": "^2.3.0",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
-    "egg-bin": "^4.12.0",
-    "egg-mock": "^3.22.1",
-    "sequelize-cli": "^5.4.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "babel-preset-es2015": "^6.24.1"
   }
 }
