--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ npm-debug.log
 yarn-error.log
 node_modules/
 package-lock.json
+yarn.lock
 coverage/
 .idea/
 run/
@@ -11,4 +12,3 @@ run/
 *.un~
 typings/
 .nyc_output/
-env-*.yml
