--- a/package.json
+++ b/package.json
@@ -1,29 +1,48 @@
 {
-  "name": "node-blog",
-  "version": "0.0.0",
+  "name": "blog-node",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
+  "egg": {
+    "declarations": true
   },
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "consola": "^1.4.4",
-    "cookie-parser": "~1.4.3",
-    "crypto": "^1.0.1",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "express-session": "^1.15.6",
-    "http-errors": "~1.6.2",
-    "mongodb": "^3.1.8",
-    "mongoose": "^5.3.7",
-    "mongoose-auto-increment": "^5.0.1",
-    "morgan": "~1.9.0",
-    "node-fetch": "^2.3.0",
-    "yargs": "^12.0.2"
+    "egg": "^2.15.1",
+    "egg-scripts": "^2.11.0",
+    "egg-sequelize": "^5.2.0",
+    "mysql2": "^1.6.5"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1"
-  }
+    "autod": "^3.0.1",
+    "autod-egg": "^1.1.0",
+    "egg-bin": "^4.11.0",
+    "egg-ci": "^1.11.0",
+    "egg-mock": "^3.21.0",
+    "eslint": "^5.13.0",
+    "eslint-config-egg": "^7.1.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "scripts": {
+    "start": "egg-scripts start --daemon --title=egg-server-blog-node",
+    "stop": "egg-scripts stop --title=egg-server-blog-node",
+    "dev": "egg-bin dev",
+    "debug": "egg-bin debug",
+    "test": "npm run lint -- --fix && npm run test-local",
+    "test-local": "egg-bin test",
+    "cov": "egg-bin cov",
+    "lint": "eslint .",
+    "ci": "npm run lint && npm run cov",
+    "autod": "autod"
+  },
+  "ci": {
+    "version": "10"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "guoyanhong",
+  "license": "MIT"
 }
