--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "egg": "^2.15.1",
+    "egg-aop": "^0.5.3",
+    "egg-controller": "^0.3.30",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
+    "egg-validate": "^2.0.2",
     "mongoose-auto-increment": "^5.0.1",
     "yargs": "^14.0.0"
   },
